--- a/src/org/gtd/data/b0/64fe2e-0c5e-483e-978e-3f9bdab3862d/liwei_engine.org
+++ b/src/org/gtd/data/b0/64fe2e-0c5e-483e-978e-3f9bdab3862d/liwei_engine.org
@@ -1,4 +1,5 @@
 #+STARTUP: INDENT OVERVIEW
+#+TAGS: { ui(u) table(t) }
 
 * 利为引擎
 ** 启动流程
@@ -62,7 +63,7 @@ GlobalZ == 0 的其他任何对象(2d对象)
 GlobalZ == 0 且设置了SetIsNoDepthTest(True)的对象(一般来说是3d透明网格对象)及其下挂节点
          ↓   
 GlobalZ > 0 的任何对象
-** UI规范
+** UI                                                                  :ui:
 *** 命名
 **** 文件命名
 小写英文+下划线+数字, 不要有特殊字符, 长度不要超过四十, 目录不要超过两级.
@@ -191,5 +192,8 @@ Wrong: m_happen, m_ID_Scroll
 - 性能问题:
   * 不要用while True这种可能死循环的写法, 可以用一个比较大的数作为边界
   * 刷新函数职能单一
+** 导表                                                             :table:
+*** 常规知识
+1. table用户表的格式字段可以自定义被引用时的输出格式({字段名})
 
 ** 坑
