--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -26,12 +26,14 @@ SCHEDULED: <2021-05-01 周六 18:00 ++1w> DEADLINE: <2021-05-03 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-28 周三 19:00 ++1d> DEADLINE: <2021-04-28 周三 23:59 ++1d>
+SCHEDULED: <2021-04-30 周五 19:00 ++1d> DEADLINE: <2021-04-30 周五 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-27 周二 21:45]
+:LAST_REPEAT: [2021-04-29 周四 21:59]
 :END:
 
+- State "DONE"       from "TODO"       [2021-04-29 周四 21:59]
+- State "DONE"       from "TODO"       [2021-04-28 周三 23:04]
 - State "DONE"       from "TODO"       [2021-04-27 周二 21:45]
 - State "DONE"       from "TODO"       [2021-04-26 周一 23:07]
 - State "DONE"       from "TODO"       [2021-04-25 周日 21:56]
@@ -66,13 +68,15 @@ SCHEDULED: <2021-04-28 周三 19:00 ++1d> DEADLINE: <2021-04-28 周三 23:59 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-28 周三 19:00 ++1d>
+SCHEDULED: <2021-04-30 周五 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-27 周二 23:44]
+:LAST_REPEAT: [2021-04-29 周四 09:10]
 :END:
+- State "DONE"       from "TODO"       [2021-04-29 周四 09:10]
+- State "DONE"       from "TODO"       [2021-04-28 周三 08:40]
 - State "DONE"       from "TODO"       [2021-04-27 周二 23:44]
 - State "DONE"       from "TODO"       [2021-04-26 周一 23:07]
 - State "DONE"       from "TODO"       [2021-04-24 周六 21:44]
@@ -105,12 +109,14 @@ SCHEDULED: <2021-04-28 周三 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#C] 学习 org-mode                                          :learn:
-SCHEDULED: <2021-04-28 周三 19:00 ++1d/2d>
+SCHEDULED: <2021-04-30 周五 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-27 周二 09:27]
+:LAST_REPEAT: [2021-04-29 周四 09:45]
 :END:
+- State "DONE"       from "TODO"       [2021-04-29 周四 09:45]
+- State "DONE"       from "TODO"       [2021-04-28 周三 08:59]
 - State "DONE"       from "TODO"       [2021-04-27 周二 09:27]
 - State "DONE"       from "TODO"       [2021-04-26 周一 12:03]
 - State "DONE"       from "TODO"       [2021-04-24 周六 21:44]
@@ -136,11 +142,11 @@ SCHEDULED: <2021-04-28 周三 19:00 ++1d/2d>
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
 - State "DONE"       from "TODO"       [2021-04-04 周日 14:36]
 - State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
-** DONE [#A] 学习PMGO系统                                           :learn:
-CLOSED: [2021-04-26 周一 10:42] SCHEDULED: <2021-04-26 周一 09:00>
-- State "DONE"       from "TODO"       [2021-04-26 周一 10:42]
+** DONE [#A] M8导表工具学习                                         :learn:
+CLOSED: [2021-04-29 周四 10:03] SCHEDULED: <2021-04-29 周四 9:50>
+- State "DONE"       from "TODO"       [2021-04-29 周四 10:03]
 :LOGBOOK:
-CLOCK: [2021-04-26 周一 10:32]--[2021-04-26 周一 10:42] =>  0:10
+CLOCK: [2021-04-29 周四 09:47]--[2021-04-29 周四 10:03] =>  0:16
 :END:
 ** Archive                                                        :ARCHIVE:
 *** DONE [#C] 学习org-edna                                          :learn:
@@ -265,6 +271,12 @@ CLOSED: [2021-04-25 周日 20:21] SCHEDULED: <2021-04-25 周日 19:25>
 CLOCK: [2021-04-25 周日 19:55]--[2021-04-25 周日 20:20] =>  0:25
 CLOCK: [2021-04-25 周日 19:25]--[2021-04-25 周日 19:50] =>  0:25
 :END:
+** DONE [#A] 学习PMGO系统                                           :learn:
+CLOSED: [2021-04-26 周一 10:42] SCHEDULED: <2021-04-26 周一 09:00>
+- State "DONE"       from "TODO"       [2021-04-26 周一 10:42]
+:LOGBOOK:
+CLOCK: [2021-04-26 周一 10:32]--[2021-04-26 周一 10:42] =>  0:10
+:END:
 * Appointment
 ** WAIT 组装一台性价比高的台式机用于开发和娱乐               :learn:future:
 DEADLINE: <2021-10-01 周五>
@@ -289,8 +301,55 @@ DEADLINE: <2021-10-01 周五>
 |   | earphone    |     0 |       |       |
 #+TBLFM: $3 = $4
 * Project
-** SCH [#A] M8项目战斗逻辑模块梳理                                   :work:
-SCHEDULED: <2021-04-27 周二 10:30> DEADLINE: <2021-04-29 周四 21:00>
+** DONE [#A] 英雄山导表制作                                          :work:
+CLOSED: [2021-04-29 周四 14:52] SCHEDULED: <2021-04-29 周四 09:00> DEADLINE: <2021-04-29 周四 21:00>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+- State "DONE"       from "SCH"        [2021-04-29 周四 14:52]
+*** DONE 英雄山组队关卡章节表
+CLOSED: [2021-04-29 周四 11:14] SCHEDULED: <2021-04-29 周四 11:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+- State "DONE"       from "DONE"       [2021-04-29 周四 11:14]
+:LOGBOOK:
+CLOCK: [2021-04-29 周四 11:03]--[2021-04-29 周四 11:14] =>  0:11
+CLOCK: [2021-04-29 周四 10:33]--[2021-04-29 周四 10:58] =>  0:25
+CLOCK: [2021-04-29 周四 10:03]--[2021-04-29 周四 10:28] =>  0:25
+:END:
+*** DONE 英雄山怪物表
+CLOSED: [2021-04-29 周四 11:15] SCHEDULED: <2021-04-29 周四 11:14>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-29 周四 11:15]
+*** DONE 英雄山组队关卡表
+CLOSED: [2021-04-29 周四 14:52] SCHEDULED: <2021-04-29 周四 11:15>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-29 周四 14:52]
+:LOGBOOK:
+CLOCK: [2021-04-29 周四 14:40]--[2021-04-29 周四 14:52] =>  0:12
+CLOCK: [2021-04-29 周四 14:10]--[2021-04-29 周四 14:35] =>  0:25
+CLOCK: [2021-04-29 周四 13:35]--[2021-04-29 周四 14:00] =>  0:25
+CLOCK: [2021-04-29 周四 13:05]--[2021-04-29 周四 13:30] =>  0:25
+:END:
+*** DONE 英雄山单人关卡表
+CLOSED: [2021-04-29 周四 14:52] SCHEDULED: <2021-04-29 周四 14:52>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-29 周四 14:52]
+*** DONE 英雄山规则表
+CLOSED: [2021-04-29 周四 14:52] SCHEDULED: <2021-04-29 周四 14:52>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+** WAIT [#A] M8项目战斗逻辑模块梳理                                  :work:
+SCHEDULED: <2021-04-27 周二 10:30>
 :PROPERTIES:
 :BLOCKER: children
 :END:                          
@@ -317,12 +376,24 @@ CLOCK: [2021-04-27 周二 17:21]--[2021-04-27 周二 17:46] =>  0:25
 CLOCK: [2021-04-27 周二 16:51]--[2021-04-27 周二 17:16] =>  0:25
 CLOCK: [2021-04-27 周二 16:21]--[2021-04-27 周二 16:46] =>  0:25
 :END:
-*** TODO 阅读战斗逻辑代码
-SCHEDULED: <2021-04-27 周二 19:31>
+*** WAIT 阅读战斗逻辑代码
+SCHEDULED: <2021-04-28 周三 09:31>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
+- State "WAIT"       from "TODO"       [2021-04-28 周三 20:28] \\
+  先去开发英雄山
 :LOGBOOK:
+CLOCK: [2021-04-28 周三 16:58]--[2021-04-28 周三 17:23] =>  0:25
+CLOCK: [2021-04-28 周三 16:23]--[2021-04-28 周三 16:48] =>  0:25
+CLOCK: [2021-04-28 周三 15:53]--[2021-04-28 周三 16:18] =>  0:25
+CLOCK: [2021-04-28 周三 15:22]--[2021-04-28 周三 15:48] =>  0:26
+CLOCK: [2021-04-28 周三 14:52]--[2021-04-28 周三 15:17] =>  0:25
+CLOCK: [2021-04-28 周三 14:17]--[2021-04-28 周三 14:42] =>  0:25
+CLOCK: [2021-04-28 周三 13:47]--[2021-04-28 周三 14:12] =>  0:25
+CLOCK: [2021-04-28 周三 13:17]--[2021-04-28 周三 13:42] =>  0:25
+CLOCK: [2021-04-28 周三 11:12]--[2021-04-28 周三 11:37] =>  0:25
+CLOCK: [2021-04-28 周三 10:42]--[2021-04-28 周三 11:07] =>  0:25
 CLOCK: [2021-04-27 周二 20:36]--[2021-04-27 周二 21:01] =>  0:25
 CLOCK: [2021-04-27 周二 20:01]--[2021-04-27 周二 20:26] =>  0:25
 CLOCK: [2021-04-27 周二 19:31]--[2021-04-27 周二 19:56] =>  0:25
@@ -330,84 +401,6 @@ CLOCK: [2021-04-27 周二 19:31]--[2021-04-27 周二 19:56] =>  0:25
 *** WAIT 整理逻辑
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
-:END:
-** DONE [#A] 整理入门教程文档                                        :work:
-CLOSED: [2021-04-26 周一 17:33] SCHEDULED: <2021-04-26 周一 13:00> DEADLINE: <2021-04-26 周一 21:00>
-:PROPERTIES:
-:BLOCKER: children
-:END:                          
-- State "DONE"       from "SCH"        [2021-04-26 周一 17:33]
-*** DONE 环境搭建 
-CLOSED: [2021-04-26 周一 12:03] SCHEDULED: <2021-04-26 周一 11:00>
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:                          
-- State "DONE"       from "TODO"       [2021-04-26 周一 12:03]
-:LOGBOOK:
-CLOCK: [2021-04-26 周一 11:08]--[2021-04-26 周一 11:33] =>  0:25
-:END:
-*** DONE 利为引擎
-CLOSED: [2021-04-26 周一 15:58] SCHEDULED: <2021-04-26 周一 12:03>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-26 周一 15:58]
-:LOGBOOK:
-CLOCK: [2021-04-26 周一 15:35]--[2021-04-26 周一 15:58] =>  0:23
-CLOCK: [2021-04-26 周一 15:05]--[2021-04-26 周一 15:30] =>  0:25
-CLOCK: [2021-04-26 周一 14:35]--[2021-04-26 周一 15:00] =>  0:25
-CLOCK: [2021-04-26 周一 14:05]--[2021-04-26 周一 14:30] =>  0:25
-:END:
-*** DONE UI基础
-CLOSED: [2021-04-26 周一 16:48] SCHEDULED: <2021-04-26 周一 15:58>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-26 周一 16:48]
-:LOGBOOK:
-CLOCK: [2021-04-26 周一 16:17]--[2021-04-26 周一 16:42] =>  0:25
-:END:
-*** DONE 代码设计和MVC介绍
-CLOSED: [2021-04-26 周一 17:16] SCHEDULED: <2021-04-26 周一 16:48>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-26 周一 17:16]
-:LOGBOOK:
-CLOCK: [2021-04-26 周一 16:58]--[2021-04-26 周一 17:16] =>  0:18
-:END:
-*** DONE 客户端常用功能
-CLOSED: [2021-04-26 周一 17:16] SCHEDULED: <2021-04-26 周一 17:16>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-26 周一 17:16]
-*** DONE 项目调试工具
-CLOSED: [2021-04-26 周一 17:19] SCHEDULED: <2021-04-26 周一 17:16>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-26 周一 17:19]
-*** DONE 大作业
-CLOSED: [2021-04-26 周一 17:33] SCHEDULED: <2021-04-26 周一 17:19>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-26 周一 17:33]
-:LOGBOOK:
-CLOCK: [2021-04-26 周一 17:21]--[2021-04-26 周一 17:33] =>  0:12
-:END:
-*** DONE 在线更新
-CLOSED: [2021-04-26 周一 17:33] SCHEDULED: <2021-04-26 周一 17:33>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-26 周一 17:33]
-*** DONE 工作流相关系统
-CLOSED: [2021-04-26 周一 17:33] SCHEDULED: <2021-04-26 周一 17:33>
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 ** ArChive                                                        :ARCHIVE:
 *** DONE [#A] 学习利为游戏引擎                               :learn:ATTACH:
@@ -1092,6 +1085,112 @@ CLOCK: [2021-04-19 周一 10:30]--[2021-04-19 周一 10:55] =>  0:25
 CLOCK: [2021-04-25 周日 17:05]--[2021-04-25 周日 17:30] =>  0:25
 CLOCK: [2021-04-25 周日 16:35]--[2021-04-25 周日 17:00] =>  0:25
 CLOCK: [2021-04-25 周日 16:10]--[2021-04-25 周日 16:35] =>  0:25
+:END:
+** DONE [#A] 整理入门教程文档                                        :work:
+CLOSED: [2021-04-26 周一 17:33] SCHEDULED: <2021-04-26 周一 13:00> DEADLINE: <2021-04-26 周一 21:00>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+- State "DONE"       from "SCH"        [2021-04-26 周一 17:33]
+*** DONE 环境搭建 
+CLOSED: [2021-04-26 周一 12:03] SCHEDULED: <2021-04-26 周一 11:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+- State "DONE"       from "TODO"       [2021-04-26 周一 12:03]
+:LOGBOOK:
+CLOCK: [2021-04-26 周一 11:08]--[2021-04-26 周一 11:33] =>  0:25
+:END:
+*** DONE 利为引擎
+CLOSED: [2021-04-26 周一 15:58] SCHEDULED: <2021-04-26 周一 12:03>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-26 周一 15:58]
+:LOGBOOK:
+CLOCK: [2021-04-26 周一 15:35]--[2021-04-26 周一 15:58] =>  0:23
+CLOCK: [2021-04-26 周一 15:05]--[2021-04-26 周一 15:30] =>  0:25
+CLOCK: [2021-04-26 周一 14:35]--[2021-04-26 周一 15:00] =>  0:25
+CLOCK: [2021-04-26 周一 14:05]--[2021-04-26 周一 14:30] =>  0:25
+:END:
+*** DONE UI基础
+CLOSED: [2021-04-26 周一 16:48] SCHEDULED: <2021-04-26 周一 15:58>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-26 周一 16:48]
+:LOGBOOK:
+CLOCK: [2021-04-26 周一 16:17]--[2021-04-26 周一 16:42] =>  0:25
+:END:
+*** DONE 代码设计和MVC介绍
+CLOSED: [2021-04-26 周一 17:16] SCHEDULED: <2021-04-26 周一 16:48>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-26 周一 17:16]
+:LOGBOOK:
+CLOCK: [2021-04-26 周一 16:58]--[2021-04-26 周一 17:16] =>  0:18
+:END:
+*** DONE 客户端常用功能
+CLOSED: [2021-04-26 周一 17:16] SCHEDULED: <2021-04-26 周一 17:16>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-26 周一 17:16]
+*** DONE 项目调试工具
+CLOSED: [2021-04-26 周一 17:19] SCHEDULED: <2021-04-26 周一 17:16>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-26 周一 17:19]
+*** DONE 大作业
+CLOSED: [2021-04-26 周一 17:33] SCHEDULED: <2021-04-26 周一 17:19>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-26 周一 17:33]
+:LOGBOOK:
+CLOCK: [2021-04-26 周一 17:21]--[2021-04-26 周一 17:33] =>  0:12
+:END:
+*** DONE 在线更新
+CLOSED: [2021-04-26 周一 17:33] SCHEDULED: <2021-04-26 周一 17:33>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-26 周一 17:33]
+*** DONE 工作流相关系统
+CLOSED: [2021-04-26 周一 17:33] SCHEDULED: <2021-04-26 周一 17:33>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+** SCH [#A] 英雄山关卡界面                                           :work:
+SCHEDULED: <2021-04-29 周四 15:30> DEADLINE: <2021-05-07 周五 21:00>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+*** TODO 英雄山关卡场景制作
+SCHEDULED: <2021-04-29 周四 15:30>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+:LOGBOOK:
+CLOCK: [2021-04-29 周四 20:50]--[2021-04-29 周四 21:15] =>  0:25
+CLOCK: [2021-04-29 周四 20:15]--[2021-04-29 周四 20:40] =>  0:25
+CLOCK: [2021-04-29 周四 19:45]--[2021-04-29 周四 20:10] =>  0:25
+CLOCK: [2021-04-29 周四 19:15]--[2021-04-29 周四 19:40] =>  0:25
+CLOCK: [2021-04-29 周四 18:45]--[2021-04-29 周四 19:10] =>  0:25
+CLOCK: [2021-04-29 周四 18:10]--[2021-04-29 周四 18:35] =>  0:25
+CLOCK: [2021-04-29 周四 17:40]--[2021-04-29 周四 18:05] =>  0:25
+CLOCK: [2021-04-29 周四 17:10]--[2021-04-29 周四 17:35] =>  0:25
+CLOCK: [2021-04-29 周四 16:40]--[2021-04-29 周四 17:05] =>  0:25
+CLOCK: [2021-04-29 周四 16:05]--[2021-04-29 周四 16:30] =>  0:25
+CLOCK: [2021-04-29 周四 15:35]--[2021-04-29 周四 16:00] =>  0:25
+CLOCK: [2021-04-29 周四 15:05]--[2021-04-29 周四 15:30] =>  0:25
+:END:
+*** WAIT 挂机界面优化调整
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
 :END:
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
