--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -25,13 +25,14 @@ SCHEDULED: <2021-05-01 周六 18:00 ++1w> DEADLINE: <2021-05-03 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#A] 完成每日日报                                             :work:
-SCHEDULED: <2021-05-06 Thu 19:00 ++1d> DEADLINE: <2021-05-06 Thu 23:59 ++1d>
+** TODO [#A] 完成每日日报                                            :work:
+SCHEDULED: <2021-05-07 周五 19:00 ++1d> DEADLINE: <2021-05-07 周五 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-01 Sat 23:04]
+:LAST_REPEAT: [2021-05-06 周四 22:59]
 :END:
 
+- State "DONE"       from "TODO"       [2021-05-06 周四 22:59]
 - State "CANCELED"   from "TODO"       [2021-05-05 Wed 21:04] \\
   51假期
 - State "CANCELED"   from "TODO"       [2021-05-04 Tue 22:55] \\
@@ -79,13 +80,16 @@ SCHEDULED: <2021-05-06 Thu 19:00 ++1d> DEADLINE: <2021-05-06 Thu 23:59 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-05-04 周二 19:00 ++1d>
+SCHEDULED: <2021-05-07 周五 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-03 周一 13:57]
+:LAST_REPEAT: [2021-05-06 周四 23:04]
 :END:
+- State "DONE"       from "TODO"       [2021-05-06 周四 23:04]
+- State "DONE"       from "TODO"       [2021-05-05 周三 09:12]
+- State "DONE"       from "TODO"       [2021-05-04 周二 09:20]
 - State "DONE"       from "TODO"       [2021-05-03 周一 13:57]
 - State "DONE"       from "TODO"       [2021-05-02 Sun 23:06]
 - State "DONE"       from "TODO"       [2021-05-01 Sat 23:14]
@@ -122,13 +126,16 @@ SCHEDULED: <2021-05-04 周二 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#C] 学习 org-mode                                          :learn:
-SCHEDULED: <2021-05-04 周二 19:00 ++1d/2d>
+** DONE [#C] 学习 org-mode                                          :learn:
+CLOSED: [2021-05-06 周四 08:46] SCHEDULED: <2021-05-06 周四 19:00>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-03 周一 13:57]
+:LAST_REPEAT: [2021-05-05 周三 11:25]
 :END:
+- State "DONE"       from "TODO"       [2021-05-06 周四 08:46]
+- State "DONE"       from "TODO"       [2021-05-05 周三 11:25]
+- State "DONE"       from "TODO"       [2021-05-04 周二 10:18]
 - State "DONE"       from "TODO"       [2021-05-03 周一 13:57]
 - State "DONE"       from "TODO"       [2021-05-02 Sun 22:54]
 - State "DONE"       from "TODO"       [2021-05-01 Sat 23:26]
@@ -238,7 +245,7 @@ CLOCK: [2021-04-27 周二 19:31]--[2021-04-27 周二 19:56] =>  0:25
 :TRIGGER+: parent todo!(DONE)
 :END:
 ** SCH [#A] 英雄山关卡界面                                           :work:
-SCHEDULED: <2021-04-29 周四 15:30> DEADLINE: <2021-05-07 周五 21:00>
+SCHEDULED: <2021-04-29 周四 15:30> DEADLINE: <2021-05-08 周六 21:00>
 :PROPERTIES:
 :BLOCKER: children
 :END:                          
@@ -249,12 +256,30 @@ CLOSED: [2021-04-30 周五 14:12] SCHEDULED: <2021-04-29 周四 15:30>
 :END:                          
 - State "DONE"       from "TODO"       [2021-04-30 周五 14:12]
 *** TODO 英雄山关卡场景制作
-DEADLINE: <2021-05-06 周四 21:00> SCHEDULED: <2021-04-30 周五 14:12>
+DEADLINE: <2021-05-08 周六 21:00> SCHEDULED: <2021-04-30 周五 14:12>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 :LOGBOOK:
+CLOCK: [2021-05-06 周四 21:15]--[2021-05-06 周四 21:40] =>  0:25
+CLOCK: [2021-05-06 周四 20:40]--[2021-05-06 周四 21:05] =>  0:25
+CLOCK: [2021-05-06 周四 20:10]--[2021-05-06 周四 20:35] =>  0:25
+CLOCK: [2021-05-06 周四 19:40]--[2021-05-06 周四 20:05] =>  0:25
+CLOCK: [2021-05-06 周四 19:10]--[2021-05-06 周四 19:35] =>  0:25
+CLOCK: [2021-05-06 周四 18:35]--[2021-05-06 周四 19:00] =>  0:25
+CLOCK: [2021-05-06 周四 17:05]--[2021-05-06 周四 17:30] =>  0:25
+CLOCK: [2021-05-06 周四 16:29]--[2021-05-06 周四 16:54] =>  0:25
+CLOCK: [2021-05-06 周四 15:59]--[2021-05-06 周四 16:24] =>  0:25
+CLOCK: [2021-05-06 周四 15:29]--[2021-05-06 周四 15:54] =>  0:25
+CLOCK: [2021-05-06 周四 14:59]--[2021-05-06 周四 15:24] =>  0:25
+CLOCK: [2021-05-06 周四 14:24]--[2021-05-06 周四 14:49] =>  0:25
+CLOCK: [2021-05-06 周四 13:54]--[2021-05-06 周四 14:19] =>  0:25
+CLOCK: [2021-05-06 周四 13:24]--[2021-05-06 周四 13:49] =>  0:25
+CLOCK: [2021-05-06 周四 11:06]--[2021-05-06 周四 11:31] =>  0:25
+CLOCK: [2021-05-06 周四 10:36]--[2021-05-06 周四 11:01] =>  0:25
+CLOCK: [2021-05-06 周四 10:06]--[2021-05-06 周四 10:31] =>  0:25
+CLOCK: [2021-05-06 周四 09:36]--[2021-05-06 周四 10:01] =>  0:25
 CLOCK: [2021-04-30 周五 17:17]--[2021-04-30 周五 17:42] =>  0:25
 CLOCK: [2021-04-30 周五 16:47]--[2021-04-30 周五 17:12] =>  0:25
 CLOCK: [2021-04-30 周五 16:17]--[2021-04-30 周五 16:42] =>  0:25
